--- a/app/index.html
+++ b/app/index.html
@@ -1,23 +1,21 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- The first thing in any HTML file should be the charset -->
-    <meta charset="utf-8">
-    <!-- Make the page mobile compatible -->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Allow installing the app to the homescreen -->
-    <link rel="manifest" href="manifest.json">
-
-    <script src="http://g.alicdn.com/de/prismplayer/1.4.2/prism-min.js"></script>
-    <meta name="mobile-web-app-capable" content="yes">
-    <title>react-editor</title>
-  </head>
-  <body>
-    <!-- Display a message if JS has been disabled on the browser. -->
-    <noscript>If you're seeing this message, that means <strong>JavaScript has been disabled on your browser</strong>, please <strong>enable JS</strong> to make this app work.</noscript>
-
-    <!-- The app hooks into this div -->
-    <div id="app"></div>
-    <!-- A lot of magic happens in this file. HtmlWebpackPlugin automatically includes all assets (e.g. bundle.js, main.css) with the correct HTML tags, which is why they are missing in this HTML file. Don't add any assets here! (Check out webpackconfig.js if you want to know more) -->
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, target-densitydpi=device-dpi">
+  <link rel="manifest" href="manifest.json">
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.8.0/styles/atom-one-dark.min.css">
+  <meta name="mobile-web-app-capable" content="yes">
+  <!--[if lt IE 9]>
+    <p class="browsehappy" style="height: 300px; line-height: 300px; font-family: 'Microsoft YaHei'">
+      <center>Sorry,本站不兼容<strong>过时</strong>的<strong>IE</strong>浏览器(所有)。<a class="link" href="http://browsehappy.com">戳这里</a>升级你的浏览器，推荐Google Chrome</p></center>
+    </p>
+  <![endif]-->
+  <title>BLOG</title>
+</head>
+<body>
+<div id="app" style="height: 100%"></div>
+<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
+</body>
 </html>
