--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
       <center>Sorry,本站不兼容<strong>过时</strong>的<strong>IE</strong>浏览器(所有)。<a class="link" href="http://browsehappy.com">戳这里</a>升级你的浏览器，推荐Google Chrome</p></center>
     </p>
   <![endif]-->
-  <title>BLOG</title>
+  <title>Editor</title>
 </head>
 <body>
 <div id="app" style="height: 100%"></div>
